_archived/nginx-gateway-fabric-private/chart/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-private
  namespace: nginx-gateway-fabric-private
spec:
  gatewayClassName: nginx-private
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: private-tls
      allowedRoutes:
        namespaces:
          from: All
  addresses:
    - type: IPAddress
      value: 192.168.50.81
